# rfbzero

./: .coveragerc  .gitignore  .mypy.ini  .pylintrc  .readthedocs.yaml  AUTHORS  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  quick_rfbzero_compare.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/source/: conf.py  crossover.rst  degradation.rst  examples.rst  experiment.rst  faq.rst  flowcell.rst  getting-started.rst  index.rst  modules.rst  rfbzero.rst
docs/source/examples/: simulate_RFB_example.ipynb
joss-paper/: paper.bib  paper.md
rfbzero/: crossover.py  cycle_protocol.py  degradation.py  experiment.py  functions.py  model_playground.py  redox_flow_cell.py  zeroD_model_1e_vs_1e.py  zeroD_model_crossover.py  zeroD_model_degradations.py
rfbzero/src/: experiment.py  model_playground.py
src/rfbzero/: crossover.py  degradation.py  experiment.py  model_playground.py  redox_flow_cell.py
tests/: check_coverage.sh  run_tests.sh  test_crossover.py  test_degradation.py  test_experiment.py  test_redox_flow_cell.py
