# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfbzero"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"

# [tool.coverage.run]
# omit = [
#    "model_playground.py",
#    "tests/*",
# ]